--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^6.4.1",
     "argon2": "^0.41.1",
     "bull": "^4.16.5",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.5.0",
     "nodemailer": "^6.10.0",
